# hal

./: .gitignore  PLAN.md  README.md  pyproject.toml  test_edge_cases.py
.beads/: config.yaml  issues.jsonl
hal/: __init__.py  __main__.py  config.py  evaluate.py  hook.py  packs.py
packs/: cloud.aws.yaml  cloud.azure.yaml  containers.docker.yaml  core.filesystem.yaml  core.git.yaml
tests/: test_config.py  test_evaluate.py  test_hook.py  test_install.py  test_packs.py
